--- a/config/i3/config
+++ b/config/i3/config
@@ -15,6 +15,7 @@ set $mod Mod4
 # is used in the bar {} block below.
 font pango:monospace 8
 exec wal -R &
+bindsym $mod+Print exec "wal -i $HOME/Pictures/Wallpapers;/home/jbrooksbank/bin/intellijPywal/intellijPywalGen.sh  /home/jbrooksbank/.CLion2019.1/config"
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -196,7 +197,6 @@ gaps outer 0
 assign [class="Atom"] $ws2
 assign [class="Firefox"] $ws3
 
-exec_always --no-startup-id ~/.config/ui-update.sh &
 
 exec --no-startup-id compton --config ~/.config/compton/config -b
 
