--- a/config/polybar/config
+++ b/config/polybar/config
@@ -19,7 +19,6 @@ secondary = ${xrdb:color2:#222}
 alert = ${xrdb:color3:#222}
 
 [bar/bottom]
-monitor = DP-2
 bottom = true
 width = 100%
 height = 36
@@ -45,7 +44,7 @@ font-0 = "Ubuntu Nerd Font:style=Regular:size=10:antialias=true;1"
 
 modules-left = i3 xwindow
 modules-center = date
-modules-right = xkeyboard pulseaudio network memory cpu temperature powermenu
+modules-right = xkeyboard pulseaudio network battery  cpu temperature powermenu
 
 tray-position = right
 tray-padding = 2
@@ -56,6 +55,32 @@ wm-restack = i3
 
 scroll-up = i3wm-wsprev
 scroll-down = i3wm-wsnext
+
+[module/battery]
+type = internal/battery
+
+label-charging = Charging %percentage%%
+label-discharging = Discharging %percentage%%
+label-full = Full I guess lol 
+
+; This is useful in case the battery never reports 100% charge
+full-at = 99
+
+; Use the following command to list batteries and adapters:
+; $ ls -1 /sys/class/power_supply/
+battery = BAT0
+adapter = ADP1
+
+; If an inotify event haven't been reported in this many
+; seconds, manually poll for new values.
+;
+; Needed as a fallback for systems that don't report events
+; on sysfs/procfs.
+;
+; Disable polling by setting the interval to 0.
+;
+; Default: 5
+poll-interval = 5
 
 [module/xwindow]
 type = internal/xwindow
