--- a/config/i3/config
+++ b/config/i3/config
@@ -22,7 +22,7 @@ workspace_auto_back_and_forth yes
 # is used in the bar {} block below.
 font pango:monospace 8
 exec unclutter &
-set up watcher for inkscape figures, see workflow for vim + latex + inkscape  
+# set up watcher for inkscape figures, see workflow for vim + latex + inkscape  
 exec inkscape-figures watch &
 exec wal -R &
 bindsym $mod+Print exec "wal -i $HOME/Pictures/Wallpapers;/home/jbrooksbank/bin/intellijPywal/intellijPywalGen.sh  /home/jbrooksbank/.CLion2019.1/config"
