--- a/.ideavimrc
+++ b/.ideavimrc
@@ -55,7 +55,13 @@ map <leader>z <Action>(ToggleDistractionFreeMode)
 map <leader>s <Action>(SelectInProjectView)
 map <leader>a <Action>(Annotate)
 map <leader>h <Action>(Vcs.ShowTabbedFileHistory)
-nnoremap <leader><space> :nohlseach<CR>
+nnoremap <leader><space> :nohlsearch<CR>
+nnoremap <CR><CR> :action ShowIntentionActions<CR>
+nmap <C-h> <Action>(TypeHierarchy)
+nmap <C-o> <Action>(Back)
+nmap <C-i> <Action>(Forward)
+nmap g; <Action>(JumpToLastChange)
+nmap g, <Action>(JumpToNextChange)
 
 
 map <S-Space> <Action>(GotoNextError)
@@ -65,6 +71,7 @@ map <leader>l V<Action>(ReformatCode)
 
 map <leader>b <Action>(ToggleLineBreakpoint)
 map <leader>o <Action>(FileStructurePopup)
+map <leader>i <Action>(GotoImplementation)
 
 map <leader>J Ji <ESC>
 
@@ -72,7 +79,7 @@ map <leader>J Ji <ESC>
 map H h
 
 " Toggle case and start typing. E.g. `<leader>iget`: `property` -> `getProperty`
-map <leader>i ~hi
+" map <leader>i ~hi
 " Remove selection and toggle case. E.g. `v2l<leader>u`: `getProperty` -> `property`
 vmap <leader>u d~h
 
